# server-maintainer

./: .gitignore  Cargo.toml  config.json.example  server_id.txt.example
src/: discord_commands.rs  main.rs  server_log.rs
